--- a/public/collection/index.html
+++ b/public/collection/index.html
@@ -77,7 +77,7 @@ minus the blog.
       <div class="grid-container list-sidebar">
 <header class="site-header pt5 pb2 mb4 bb b--transparent ph5 headroom z-max" role="banner">
   <nav class="site-nav db dt-l w-100" role="navigation">
-    <a class="site-brand db v-mid link no-underline w-100 tc" href="https://gualtiazza.github.io" title="Home">
+    <a class="site-brand db v-mid link no-underline w-100 tc" href="https://gualtiazza.github.io/" title="Home">
       <span class="f2 fw7">GUALTIERO AZZALINI</span>
     </a>
   </nav>
