--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 
-<meta name="twitter:card" content="summary_large_image"/><meta name="twitter:image" content="https://gualtiazza.github.io/img/IMG_2099.JPG"/>
+<meta name="twitter:card" content="summary_large_image"/><meta name="twitter:image" content="https://gualtiazza.github.io/img/IMG_3974.jpg"/>
 
   <meta itemprop="name" content="GUALTIERO AZZALINI">
 <meta itemprop="description" content="A modern, beautiful, and easily configurable blog theme for Hugo.">
@@ -104,7 +104,7 @@
       </div>
       <div class="tc mv8 v-top  w-50-l center ml4">
       
-        <img class="mv0 w-70-m" src="img/IMG_2099.JPG"/>
+        <img class="mv0 w-70-m" src="img/IMG_3974.jpg"/>
       
       <h2><a class="mt0 action button" href="/Azzalini_CV.pdf" target="_blank" onclick="this.blur();">CV</a></h2>
       <h2 class="mt0"><div class="social-icon-links" aria-hidden="true">
