--- a/research/index.html
+++ b/research/index.html
@@ -141,6 +141,16 @@ function myFunction4() {
   }
 }
 </script>
+<script>
+function myFunction5() {
+  var x = document.getElementById("myDIV5");
+  if (x.style.display === "none") {
+    x.style.display = "inline";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 
   <h2 class="ttu tracked black-30 pv3 mt0 bt b--black-30">Working Papers</h2>
   <div class="mv8 v-top">
@@ -181,9 +191,15 @@ Using data from 16 OECD countries from 1981 to 2014 we study the effects on outp
     <div class="mv8 v-top">
         <h3>Human capital inference</h3>
         <p>with Zolt&aacuten R&aacutecz</p>
+        <a onclick="myFunction5()" class="button">Abstract</a>
+         <div id="myDIV5" style="display: none;">
+  <p style="margin-bottom:.75cm;"></p>
+        There is a long-standing literature in economics whose goal is to infer properties of individuals’ income and human capital and their impact on consumption-saving decisions by using revealed choices, especially on consumption. While this approach is superior to the utilization of income data alone, it nevertheless relies on very strong assumptions on the form of the stochastic process for income, in particular it hard-wires the relationship between shocks to current income and expected future income, that is, human capital. In this paper we develop a new method that enables to perform this task without imposing any restriction on the latter. Specifically, we log-linearize the recursive relationship defining human capital, insert it into a linearized savings policy function and derive moment conditions which, in turn, we use for GMM estimation of the parameters governing moments of the joint and marginal distributions of savings and income. Using high quality Swedish administrative data on wealth – which enables us to overcome the well-known issues deriving from using imputed or survey data – we find that about 60 percent of human capital corresponds to expected income in the following year. This result suggests that individuals are very short-sighted regarding their future income when they make consumption-saving decisions.
+<p style="margin-bottom:.75cm;"></p></div>
+
         <p style="margin-bottom:1.5cm;"></p>
         <h3>A Bewley model with portfolio choice</h3>
-        <p>with Zolt&aacuten R&aacutecz and <a href="https://sites.google.com/view/markuskondziella/home?authuser=0" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Markus Kondziella</a></p>
+        <p>with <a href="https://sites.google.com/view/markuskondziella/home?authuser=0" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Markus Kondziella</a> and Zolt&aacuten R&aacutecz</p>
         <a onclick="myFunction4()" class="button">Abstract</a>
          <div id="myDIV4" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
