--- a/research/index.html
+++ b/research/index.html
@@ -160,7 +160,7 @@ function myFunction5() {
     <a onclick="myFunction2()" class="button">Abstract</a>
     <div id="myDIV2" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
-Using Swedish administrative data covering the universe of firms, employment relations and workers, I document that firm idiosyncratic productivity shocks are passed through workers' earnings heterogeneously over the business cycle. In non-recessionary periods, firms are very good insurance providers against negative shocks, but this ability diminishes in downturns. Workers, in turn, do not benefit significantly from positive shocks - unless they are very large - regardless of the state of the economy. I rationalize these empirical findings in a directed search model of the labor market with risk averse workers, on-the-job search, firm commitment and a structure of the exogenous processes capturing the fact that negative firm idiosyncratic shocks have larger adverse impacts when they occur in recessions. By generating procyclical skewness in the distribution of wage growth, the model also provides a new mechanism to explain empirical trends related to income risk variation over the business cycle. Welfare calculations reveal that workers would be willing to give up 0.3 percent of their consumption to avoid this source of uncertainty.
+Do firms provide insurance to their workers against salary fluctuations? Using Swedish administrative data, I document that firm idiosyncratic productivity shocks are passed through workers' earnings heterogeneously over the business cycle. In non-recessionary periods, firms are very good insurance providers against negative shocks, but this ability diminishes in downturns. Workers, in turn, do not benefit significantly from positive shocks regardless of the state of the economy. I rationalize these empirical findings in a model of the labor market in which workers choose where to search for a job. Firms' ability to influence on-the-job search decisions to be in line with the expected value of the employment relation is the key element to achieve this result. By generating procyclical skewness in the distribution of wage growth, the model also provides a new mechanism to explain empirical trends related to income risk variation over the business cycle. Welfare calculations reveal that workers would be willing to give up 0.3 percent of their consumption to avoid this source of uncertainty.
 <p style="margin-bottom:.75cm;"></p></div>
      
     <p style="margin-bottom:1.5cm;"></p>
@@ -190,7 +190,7 @@ Using data from 16 OECD countries from 1981 to 2014 we study the effects on outp
     <h2 class="ttu tracked black-30 pv3 mt5 bt b--black-30">Work in progress</h2>
     <div class="mv8 v-top">
         <h3>Human capital inference</h3>
-        <p>with Zolt&aacuten R&aacutecz</p>
+        <p>with <a href="https://www.zoltanracz.net/" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Zolt&aacuten R&aacutecz</a></p>
         <a onclick="myFunction5()" class="button">Abstract</a>
          <div id="myDIV5" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
@@ -199,7 +199,7 @@ Using data from 16 OECD countries from 1981 to 2014 we study the effects on outp
 
         <p style="margin-bottom:1.5cm;"></p>
         <h3>A Bewley model with portfolio choice</h3>
-        <p>with <a href="https://sites.google.com/view/markuskondziella/home?authuser=0" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Markus Kondziella</a> and Zolt&aacuten R&aacutecz</p>
+        <p>with <a href="https://sites.google.com/view/markuskondziella/home?authuser=0" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Markus Kondziella</a> and <a href="https://www.zoltanracz.net/" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Zolt&aacuten R&aacutecz</a></p>
         <a onclick="myFunction4()" class="button">Abstract</a>
          <div id="myDIV4" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
