--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script src="/panelset.min.dca42702d7daf6fd31dc352efd2bcf0e4ac8c05ccaa58d9293f6177462de5d5f.js" type="text/javascript"></script>
   
   
-  <script src="/main.min.15f4a7d06a4d5e21a60241762d6f77abae78d751acb4869800fc31b6d54a220e.js" type="text/javascript"></script>
+  <script src="/main.min.adca941c708ff3b84472095b069eceba3f4165f9707c2ed8f0bbfcdaf4fb4f8e.js" type="text/javascript"></script>
 </head>
 <body>
       <div class="grid-container home">
@@ -100,7 +100,9 @@
     <div class="flex-l items-top center" style="flex-direction: row-reverse;">
       <div class="mv8 v-top " >
         
-        <h1 class="f5 fw3 mt0 lh-copy" style="text-align: justify;text-justify: inter-word;">I am a Ph.D. student at the <a href="https://www.su.se/institute-for-international-economic-studies" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Institute for International Economic Studies (IIES)</a> at Stockholm University, on the job market in the academic year 2022-23. <br> <br> I hold a B.Sc. and a M.Sc. in Economic and Social Sciences from Bocconi University and before moving to Stockholm I worked at Bocconi University  as research assistant and at the European Central Bank.  <br> <br> My primary field is macroeconomics, with a focus on income risk and its consequences for agents’ choices and the macroeconomy.</h1>
+        <h1 class="f5 fw3 mt0 lh-copy" style="text-align: justify;text-justify: inter-word;">I am a Ph.D. student at the <a href="https://www.su.se/institute-for-international-economic-studies" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Institute for International Economic Studies (IIES)</a> at Stockholm University, on the job market in the academic year 2022-23. <br> <br> I hold a B.Sc. and a M.Sc. in Economic and Social Sciences from Bocconi University and before moving to Stockholm I worked at Bocconi University  as research assistant and at the European Central Bank.  <br> <br> My primary field is macroeconomics, with a focus on income risk and its consequences for agents’ choices and the macroeconomy.
+        </h1>
+          <p style="margin-bottom:3.5cm;"></p>
           <p style="margin-bottom:1.5cm;"></p>
         <center><img src="img/SU_IIES_hor.jpg" style="width:150px;"/></center>
           <p style="margin-bottom:1.5cm;"></p>
