--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
       
         <img class="mv0 w-70-m" src="img/IMG_3974_v2.jpg"/>
       
-      <h2><a class="mt0 action button" href="/Azzalini_CV.pdf" target="_blank" onclick="this.blur();">CV</a></h2>
+      <h2>
+        <a class="mt0 action button" href="/Azzalini_CV.pdf" target="_blank" onclick="this.blur();">CV</a>
+        <a href="https://www.dropbox.com/s/h1hubsmtoqgt6e2/Macro_labor.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Job Market Paper</a>
+      </h2>
       <h2 class="mt0"><div class="social-icon-links" aria-hidden="true">
   
   
