--- a/research/index.html
+++ b/research/index.html
@@ -158,7 +158,7 @@ function myFunction5() {
     <p style="margin-bottom:.75cm;"></p>
     <a onclick="myFunction2()" class="button">Abstract</a>
      &nbsp;
-  <a href="https://www.dropbox.com/s/h1hubsmtoqgt6e2/Macro_labor.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Paper</a>
+  <a href="https://www.dropbox.com/s/h1hubsmtoqgt6e2/Macro_labor.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
     <div id="myDIV2" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
 How does the firm's role as an insurance provider vary over the business cycle? Using Swedish administrative data, I document that idiosyncratic firm productivity shocks are passed through workers' earnings asymmetrically. In non-recessions, firms are good insurers against negative shocks. In downturns, they pass through a larger share of their shock. Positive shocks, on the other hand, are not significantly passed through regardless of the state of the economy. I rationalize these findings using a directed search model of the labor market with recursive contracts. Moral hazard risk associated with on-the-job search is key to generating pass-through and the increased risk of firm disaster in recessions is necessary to match the empirical facts. As the wage growth distribution features procyclical skewness and acyclical variance, the model also suggests a new mechanism to explain trends in income risk variation over the business cycle. Welfare calculations reveal that workers would be willing to give up a non-negligible share of consumption to avoid this source of uncertainty.
@@ -186,7 +186,7 @@ Using data from 16 OECD countries from 1981 to 2014 we study the effects on outp
     <h3> Inferring income properties from portfolio choices</h3>
      <p style="margin-bottom:.75cm;"></p>
       <a onclick="myFunction3()" class="button" >Abstract</a>
-        <a href="https://www.dropbox.com/s/3vhszleshf68fap/HIPvsRIP.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Paper</a>
+        <a href="https://www.dropbox.com/s/3vhszleshf68fap/HIPvsRIP.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
 
 <div id="myDIV3" style="display: none;">
 <p style="margin-bottom:.75cm;"></p>
