--- a/research/index.html
+++ b/research/index.html
@@ -61,7 +61,7 @@
   <script src="/panelset.min.dca42702d7daf6fd31dc352efd2bcf0e4ac8c05ccaa58d9293f6177462de5d5f.js" type="text/javascript"></script>
   
   
-  <script src="/main.min.adca941c708ff3b84472095b069eceba3f4165f9707c2ed8f0bbfcdaf4fb4f8e.js" type="text/javascript"></script>
+  <script src="/main.min.15f4a7d06a4d5e21a60241762d6f77abae78d751acb4869800fc31b6d54a220e.js" type="text/javascript"></script>
 </head>
 <body>
       <div class="grid-container res_templ">
@@ -186,6 +186,8 @@ Using data from 16 OECD countries from 1981 to 2014 we study the effects on outp
     <h3> Inferring income properties from portfolio choices</h3>
      <p style="margin-bottom:.75cm;"></p>
       <a onclick="myFunction3()" class="button" >Abstract</a>
+            &nbsp;
+
         <a href="https://www.dropbox.com/s/3vhszleshf68fap/HIPvsRIP.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
 
 <div id="myDIV3" style="display: none;">
