--- a/research/index.html
+++ b/research/index.html
@@ -61,7 +61,7 @@
   <script src="/panelset.min.dca42702d7daf6fd31dc352efd2bcf0e4ac8c05ccaa58d9293f6177462de5d5f.js" type="text/javascript"></script>
   
   
-  <script src="/main.min.adca941c708ff3b84472095b069eceba3f4165f9707c2ed8f0bbfcdaf4fb4f8e.js" type="text/javascript"></script>
+  <script src="/main.min.d4d5abee9aa5ffe66d22c47b8abcc611a521873736bae0ae75f48eb64192a9e9.js" type="text/javascript"></script>
 </head>
 <body>
       <div class="grid-container res_templ">
@@ -159,10 +159,10 @@ function myFunction5() {
     <p style="margin-bottom:.75cm;"></p>
     <a onclick="myFunction2()" class="button">Abstract</a>
      &nbsp;
-  <a href="https://www.dropbox.com/s/h1hubsmtoqgt6e2/Macro_labor.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
+  <a href="https://gualtiazza.github.io/papers/Macro_labor.pdf" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
     <div id="myDIV2" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
-How does the firm's role as an insurance provider vary over the business cycle? Using Swedish administrative data, I document that idiosyncratic firm productivity shocks are passed through workers' earnings asymmetrically. In non-recessions, firms are good insurers against negative shocks. In downturns, they pass through a larger share of their shock. Positive shocks, on the other hand, are not significantly passed through regardless of the state of the economy. I rationalize these findings using a directed search model of the labor market with recursive contracts. Moral hazard risk associated with on-the-job search is key to generating pass-through and the increased risk of firm disaster in recessions is necessary to match the empirical facts. As the wage growth distribution features procyclical skewness and acyclical variance, the model also suggests a new mechanism to explain trends in income risk variation over the business cycle. Welfare calculations reveal that workers would be willing to give up a non-negligible share of consumption to avoid this source of uncertainty.
+How does the firm's role as an insurance provider vary over the business cycle? Using Swedish administrative data, I document that idiosyncratic firm productivity shocks are passed through workers' earnings asymmetrically. In non-recessions, firms are good insurers against negative shocks. In downturns, they pass through a larger share of their shock. Regardless of the state of the economy, instead, positive shocks are mainly passed through when sizeable. I rationalize these findings using a directed search model of the labor market with recursive contracts. Moral hazard risk associated with on-the-job search is key to generating pass-through and the increased risk of firm disaster in recessions is necessary for matching the empirical facts. As the wage growth distribution features procyclical skewness and acyclical variance, the model also suggests a new mechanism for explaining trends in income risk variation over the business cycle. Welfare calculations reveal that workers would be willing to give up a non-negligible share of consumption to avoid this source of uncertainty.
 <p style="margin-bottom:.75cm;"></p></div>
 <p style="margin-bottom:1.5cm;"></p>
     <div class="mv8 v-top">
@@ -171,12 +171,24 @@ How does the firm's role as an insurance provider vary over the business cycle? 
       <a onclick="myFunction3()" class="button" >Abstract</a>
             &nbsp;
 
-        <a href="https://www.dropbox.com/s/3vhszleshf68fap/HIPvsRIP.pdf?dl=0" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
+        <a href="https://gualtiazza.github.io/papers/HIPvsRIP.pdf" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
 
 <div id="myDIV3" style="display: none;">
 <p style="margin-bottom:.75cm;"></p>
-Two main views exist on the nature of the labor income process: according to one, income shocks are very persistent and agents face similar life-cycle profiles - Restricted Income Profiles (RIP); according to the other, income shocks are not very persistent and life-cycle profiles are individual-specific - Heterogeneous Income Profiles (HIP). This paper studies the implications of these two views in a portfolio choice model in order to discover identification restrictions allowing to discern between them. I find that HIP and RIP imply different life-cycle patterns of participation and conditional risky share but similar patterns of consumption and saving. Crucial for this result is the inclusion of cyclical skewness in the stochastic process for income, which enables to correctly estimate the part of income risk deriving from the persistence of the shocks.<p style="margin-bottom:.75cm;"></p></div>
+Two main views exist on the nature of the labor income process: according to one, income shocks are very persistent and agents face similar life-cycle profiles - Restricted Income Profiles (RIP); according to the other, income shocks are not very persistent and life-cycle profiles are individual-specific - Heterogeneous Income Profiles (HIP). This paper studies the implications of these two views in a portfolio choice model in order to discover identification restrictions allowing to discern between them. I find that HIP and RIP imply different life-cycle patterns of the participation and conditional risky share choices but similar patterns of consumption and saving. Crucial for this result is the inclusion of cyclical skewness in the stochastic process for income, which enables us to correctly estimate the part of income risk deriving from the persistence of the shocks.
+<p style="margin-bottom:.75cm;"></p></div>
    </div>
+        <p style="margin-bottom:1.5cm;"></p>
+        
+        <h3>Preference heterogeneity and portfolio choices over the wealth distribution</h3>
+        <p>with <a href="https://sites.google.com/view/markuskondziella/home?authuser=0" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Markus Kondziella</a> and <a href="https://www.zoltanracz.net/" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Zolt&aacuten R&aacutecz</a></p>
+        <a onclick="myFunction4()" class="button">Abstract</a>
+        &nbsp;
+                <a href="https://gualtiazza.github.io/papers/AKRS.pdf" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
+         <div id="myDIV4" style="display: none;">
+  <p style="margin-bottom:.75cm;"></p>
+What are the key elements to generate portfolio choices over the wealth distribution in line with the data? In this paper, we argue that capturing preference heterogeneity across individuals is one of them. Using a partial equilibrium Bewley-type model with endogenous portfolio choice and cyclical skewness in labor income shocks, we show that heterogeneity in risk aversion, impatience and portfolio diversification is crucial to match the empirical schedules of unconditional risky share, participation and share of idiosyncratic variance in individual portfolios. At the same time, these elements generate dispersion in wealth through their heterogeneous effects on individuals’ investment decisions resulting in a cross-sectional wealth distribution that provides a close fit of the data, particularly at the very top.
+<p style="margin-bottom:.75cm;"></p></div>
         <p style="margin-bottom:1.5cm;"></p>
         <h3>Human capital inference</h3>
         <p>with <a href="https://www.zoltanracz.net/" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Zolt&aacuten R&aacutecz</a></p>
@@ -186,14 +198,7 @@ Two main views exist on the nature of the labor income process: according to one
 There is a long-standing literature in economics whose goal is to infer properties of individuals’ income and human capital and their impact on consumption-saving decisions by using revealed choices, especially on consumption. While this approach is superior to the utilization of income data alone, it nevertheless relies on very strong assumptions on the form of the stochastic process for income, in particular it hard-wires the relationship between shocks to current income and expected future income, that is, human capital. In this paper we develop a new method that enables to perform this task without imposing any restriction on the latter. Specifically, we log-linearize the recursive relationship defining human capital, insert it into a linearized savings policy function and derive moment conditions which, in turn, we use for GMM estimation of the parameters governing moments of the joint and marginal distributions of savings and income. Using high quality Swedish administrative data on wealth – which enables us to overcome the well-known issues deriving from using imputed or survey data – we find that about 60 percent of human capital corresponds to expected income in the following year. This result suggests that individuals are very short-sighted regarding their future income when they make consumption-saving decisions.
 <p style="margin-bottom:.75cm;"></p></div>
 
-        <p style="margin-bottom:1.5cm;"></p>
-        <h3>A Bewley model with portfolio choice</h3>
-        <p>with <a href="https://sites.google.com/view/markuskondziella/home?authuser=0" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Markus Kondziella</a> and <a href="https://www.zoltanracz.net/" style="text-decoration: none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'" target="_blank" onclick="this.blur();">Zolt&aacuten R&aacutecz</a></p>
-        <a onclick="myFunction4()" class="button">Abstract</a>
-         <div id="myDIV4" style="display: none;">
-  <p style="margin-bottom:.75cm;"></p>
-Preference heterogeneity and income risk are important determinants of individuals' savings and portfolio decisions. How much does capturing their effect on portfolio choices over the wealth distribution help explain inequality? To assess this question, we build a partial equilibrium Bewley-type model with endogenous portfolio choice, cyclical skewness in labor income, idiosyncratic returns, and heterogeneity in preference parameters. Calibrating the latter to match the increasing schedules in wealth of participation, unconditional risky share, and share of idiosyncratic variance in individual portfolios as in the data, we find that the model can match well the shape of the wealth distribution, particularly at the very top. Crucial for this result is the presence of a group of individuals with low risk aversion and high share of idiosyncratic variance who endogenously end up in the right tail of the distribution. On the other hand, the cyclical skewness of labor income enables us to explain the low stock holding for households whose wealth is dominated by human capital. Finally, we analyze the response to realistic aggregate return shocks and the model-implied evolution of wealth inequality when feeding in the historical time series of aggregate returns and GDP growth.
-<p style="margin-bottom:.75cm;"></p></div>
+
 
  <h2 class="ttu tracked black-30 pv3 mt5 bt b--black-30">Publications</h2>
     <div class="mv8 v-top">
