--- a/research/index.html
+++ b/research/index.html
@@ -61,7 +61,7 @@
   <script src="/panelset.min.dca42702d7daf6fd31dc352efd2bcf0e4ac8c05ccaa58d9293f6177462de5d5f.js" type="text/javascript"></script>
   
   
-  <script src="/main.min.aa30fd10121ae68f2ea3158a59297504ec6edb593a9dd275a7f07213551d5e37.js" type="text/javascript"></script>
+  <script src="/main.min.d4d5abee9aa5ffe66d22c47b8abcc611a521873736bae0ae75f48eb64192a9e9.js" type="text/javascript"></script>
 </head>
 <body>
       <div class="grid-container res_templ">
@@ -184,7 +184,7 @@ Two main views exist on the nature of the labor income process: according to one
                 <a href="https://gualtiazza.github.io/papers/AKRS.pdf" class="button" target="_blank" onclick="this.blur();">Working Paper</a>
          <div id="myDIV4" style="display: none;">
   <p style="margin-bottom:.75cm;"></p>
-Evidence from administrative data reveals increasing participation in risky assets, expected returns and idiosyncratic return risk over the wealth distribution. We explain these patterns quantitatively with an incomplete markets model with endogenous portfolio choice, cyclical labor income risk, and preference heterogeneity. As a by-product of this approach, our framework also generates wealth inequality, wealth mobility and marginal propensities to consume as a function of wealth closely in line with data. Simultaneously fitting wealth and portfolio choices delivers a larger and more persistent increase in wealth inequality following an aggregate return shock relative to counterfactual models lacking such a fit.
+Evidence from administrative data reveals increasing participation in risky assets, expected returns and idiosyncratic return risk over the wealth distribution. We explain these patterns quantitatively with an incomplete markets model with endogenous portfolio choice, cyclical labor income risk, and preference heterogeneity. As a by-product of this approach, our framework also generates wealth inequality, wealth mobility and marginal propensities to consume as a function of wealth closely in line with data. Simultaneously fitting wealth and portfolio choices delivers a larger and more persistent increase in wealth inequality following an aggregate return shock.
 <p style="margin-bottom:.75cm;"></p></div>
         <p style="margin-bottom:1.5cm;"></p>
         <h3>Human capital inference</h3>
